{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 461,
  "lineage": "50b635da-17c0-395b-86e4-0d459af1c547",
  "resources": [
    {
      "module": "module.ecs-alb.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-example",
      "provider": "module.ecs-alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633489328820:loadbalancer/app/imp-alb/faa002e3a3961494",
            "arn_suffix": "app/imp-alb/faa002e3a3961494",
            "desync_mitigation_mode": "defensive",
            "dns_name": "imp-alb-1263597747.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633489328820:loadbalancer/app/imp-alb/faa002e3a3961494",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "imp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0aff452f58d58d7d9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0204ebddec7af79e1"
              },
              {
                "subnet_id": "subnet-073e3760724d14f26"
              }
            ],
            "subnets": [
              "subnet-0204ebddec7af79e1",
              "subnet-073e3760724d14f26"
            ],
            "vpc_id": "vpc-0420fef71ce6500de",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.sg.module.tfer--push-web-sg.aws_security_group.security_group",
            "module.vpc.module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-example",
      "provider": "module.ecs-alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633489328820:listener/app/imp-alb/faa002e3a3961494/817fd8374fb6329a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633489328820:targetgroup/imp-alb-tg/719e77dced931663",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633489328820:listener/app/imp-alb/faa002e3a3961494/817fd8374fb6329a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633489328820:loadbalancer/app/imp-alb/faa002e3a3961494",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-alb.module.alb.aws_lb.alb-example",
            "module.ecs-alb.module.alb.aws_lb_target_group.alb-example",
            "module.sg.module.tfer--push-web-sg.aws_security_group.security_group",
            "module.vpc.module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-example",
      "provider": "module.ecs-alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633489328820:targetgroup/imp-alb-tg/719e77dced931663",
            "arn_suffix": "targetgroup/imp-alb-tg/719e77dced931663",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633489328820:targetgroup/imp-alb-tg/719e77dced931663",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "imp-alb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg.module.tfer--AllowSSH_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:security-group/sg-0d815924ea0200025",
            "description": "AllowSSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d815924ea0200025",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "AllowSSH",
            "name_prefix": "",
            "owner_id": "633489328820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backup": "False",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "UAT",
              "abscbn-product": "entertainment",
              "abscbn-url": "abs-cbn.com"
            },
            "tags_all": {
              "Backup": "False",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "UAT",
              "abscbn-product": "entertainment",
              "abscbn-url": "abs-cbn.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg.module.tfer--default_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:security-group/sg-0868223c04fd44d15",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0868223c04fd44d15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default1",
            "name_prefix": "",
            "owner_id": "633489328820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backup": "False",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "UAT",
              "abscbn-product": "entertainment",
              "abscbn-url": "abs-cbn.com"
            },
            "tags_all": {
              "Backup": "False",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "UAT",
              "abscbn-product": "entertainment",
              "abscbn-url": "abs-cbn.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg.module.tfer--push-web-ecs-service-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:security-group/sg-0b2b96e92abe2f080",
            "description": "push-web-ecs-service-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2b96e92abe2f080",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "push-web-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "633489328820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backup": "False",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "UAT",
              "abscbn-product": "ent",
              "abscbn-url": "pushweb.abs-cbn.com"
            },
            "tags_all": {
              "Backup": "False",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "UAT",
              "abscbn-product": "ent",
              "abscbn-url": "pushweb.abs-cbn.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg.module.tfer--push-web-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:security-group/sg-0aff452f58d58d7d9",
            "description": "push-web-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aff452f58d58d7d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "push-web-sg",
            "name_prefix": "",
            "owner_id": "633489328820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backup": "False",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "UAT",
              "abscbn-product": "ent",
              "abscbn-url": "pushweb.abs-cbn.com"
            },
            "tags_all": {
              "Backup": "False",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "UAT",
              "abscbn-product": "ent",
              "abscbn-url": "pushweb.abs-cbn.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02be42d84649463c0",
            "domain": "vpc",
            "id": "eipalloc-02be42d84649463c0",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-220-74-83.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.74.83",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:internet-gateway/igw-0f8c43e69e376b48c",
            "id": "igw-0f8c43e69e376b48c",
            "owner_id": "633489328820",
            "tags": {
              "Name": "consumption-igw"
            },
            "tags_all": {
              "Name": "consumption-igw"
            },
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02be42d84649463c0",
            "association_id": "eipassoc-011295b7f25e60801",
            "connectivity_type": "public",
            "id": "nat-0c623c7e6a0a285a7",
            "network_interface_id": "eni-05121ed3f03e5bc6b",
            "private_ip": "10.195.82.156",
            "public_ip": "52.220.74.83",
            "subnet_id": "subnet-088d90029d6955844",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat_gateway",
            "module.vpc.module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_app_subnet_az1_nat_gateway_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06851ee5ab362b0511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c623c7e6a0a285a7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06851ee5ab362b051",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat_gateway",
            "module.vpc.module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_app_subnet_az2_nat_gateway_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f73d1d519d087f6b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c623c7e6a0a285a7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f73d1d519d087f6b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat_gateway",
            "module.vpc.module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_data_subnet_az1_nat_gateway_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01d27502359433cc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c623c7e6a0a285a7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01d27502359433cc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat_gateway",
            "module.vpc.module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_data_subnet_az2_nat_gateway_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078ab6888f5f7c17c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c623c7e6a0a285a7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078ab6888f5f7c17c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat_gateway",
            "module.vpc.module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_subnet_az1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:route-table/rtb-06851ee5ab362b051",
            "id": "rtb-06851ee5ab362b051",
            "owner_id": "633489328820",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "consumption-rtb-private1-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "consumption-rtb-private1-ap-southeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_subnet_az2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:route-table/rtb-0f73d1d519d087f6b",
            "id": "rtb-0f73d1d519d087f6b",
            "owner_id": "633489328820",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "consumption-rtb-private2-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "consumption-rtb-private2-ap-southeast-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data_subnet_az1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:route-table/rtb-01d27502359433cc1",
            "id": "rtb-01d27502359433cc1",
            "owner_id": "633489328820",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "consumption-rtb-private3-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "consumption-rtb-private3-ap-southeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data_subnet_az2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:route-table/rtb-078ab6888f5f7c17c",
            "id": "rtb-078ab6888f5f7c17c",
            "owner_id": "633489328820",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "consumption-rtb-private4-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "consumption-rtb-private4-ap-southeast-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:route-table/rtb-045872527893bad34",
            "id": "rtb-045872527893bad34",
            "owner_id": "633489328820",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8c43e69e376b48c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "consumption-rtb-public"
            },
            "tags_all": {
              "Name": "consumption-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az1_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1249e9a9a08e765",
            "route_table_id": "rtb-06851ee5ab362b051",
            "subnet_id": "subnet-088d90029d6955844"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az2_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050f4b5ac82578378",
            "route_table_id": "rtb-0f73d1d519d087f6b",
            "subnet_id": "subnet-0bad575f6fdadd9fa"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az1_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f34216649d29da26",
            "route_table_id": "rtb-01d27502359433cc1",
            "subnet_id": "subnet-0109ee2c1c3dec31e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.module.vpc.aws_subnet.private_data_subnet_az1",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az2_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dd30cd42894b200",
            "route_table_id": "rtb-078ab6888f5f7c17c",
            "subnet_id": "subnet-0d7921668ff7ea4e4"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.module.vpc.aws_subnet.private_data_subnet_az2",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0362a05c78876b0bf",
            "route_table_id": "rtb-045872527893bad34",
            "subnet_id": "subnet-0204ebddec7af79e1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.module.vpc.aws_route_table.public_route_table",
            "module.vpc.module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1b10a4ff62daa9e",
            "route_table_id": "rtb-045872527893bad34",
            "subnet_id": "subnet-073e3760724d14f26"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.module.vpc.aws_route_table.public_route_table",
            "module.vpc.module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:security-group/sg-05b225707bb982a0c",
            "description": "vpc security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b225707bb982a0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.195.80.0/21"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "vpc-security-group",
            "name_prefix": "",
            "owner_id": "633489328820",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:subnet/subnet-088d90029d6955844",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.195.82.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088d90029d6955844",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-private1-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "consumption-subnet-private1-ap-southeast-1a"
            },
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:subnet/subnet-0bad575f6fdadd9fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.195.83.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bad575f6fdadd9fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-private2-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "consumption-subnet-private2-ap-southeast-1b"
            },
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:subnet/subnet-0109ee2c1c3dec31e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.195.84.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0109ee2c1c3dec31e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-private3-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "consumption-subnet-private3-ap-southeast-1a"
            },
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:subnet/subnet-0d7921668ff7ea4e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.195.85.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7921668ff7ea4e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-private4-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "consumption-subnet-private4-ap-southeast-1b"
            },
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:subnet/subnet-0204ebddec7af79e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.195.80.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0204ebddec7af79e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-public1-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "consumption-subnet-public1-ap-southeast-1a"
            },
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:subnet/subnet-073e3760724d14f26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.195.81.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073e3760724d14f26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-public2-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "consumption-subnet-public2-ap-southeast-1b"
            },
            "vpc_id": "vpc-0420fef71ce6500de"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc",
            "module.vpc.module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633489328820:vpc/vpc-0420fef71ce6500de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.195.80.0/21",
            "default_network_acl_id": "acl-0903c92ebb543adab",
            "default_route_table_id": "rtb-025cbcd62726a0676",
            "default_security_group_id": "sg-007535114627509bc",
            "dhcp_options_id": "dopt-0e93b7bb5bc383344",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0420fef71ce6500de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025cbcd62726a0676",
            "owner_id": "633489328820",
            "tags": {
              "Name": "consumption"
            },
            "tags_all": {
              "Name": "consumption"
            }
          }
        }
      ]
    }
  ]
}